--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-"dependencies": {
+  "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-register": "^6.14.0",
     "express": "^4.14.0"
   },
   "repository": {
@@ -18,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/SDS-React-Metawidget/react-mw-address-book/issues"
   },
-  "homepage": "https://github.com/SDS-React-Metawidget/react-mw-address-book#readme"
+  "homepage": "https://github.com/SDS-React-Metawidget/react-mw-address-book#readme",
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1"
+  }
 }
