--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-register": "^6.14.0",
     "express": "^4.14.0",
     "material-ui": "^0.15.4",
+    "metawidget": "^4.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-tap-event-plugin": "^1.0.0",
