--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.14.0",
     "express": "^4.14.0",
     "material-ui": "^0.15.4",
