--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ public/bundle.js
 node_modules/
 *.suo
 *.pyc
+npm-debug.log.801743208
+npm-debug.log.1958524405
+test/IntegrationTests/runner.bat
+*npm-debug*
